Make CTA bigger

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 fetching of
                 anime and manga from AniList, all from just Discord.
             </div>
-            <a href="https://discord.com/api/oauth2/authorize?client_id=867010131745177621&permissions=139586748480&scope=bot" target="_blank"><button id="inviteMe"><span class="gradient">Invite me</span></button></a>
+            <a href="https://discord.com/api/oauth2/authorize?client_id=867010131745177621&permissions=139586748480&scope=bot" target="_blank"><button id="inviteMe">Invite me</button></a>
         </div>
         <div id="footer">
             <div id="title" class="gradient">The Devs</div>
